--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = vim
+	ignorecase = false
 [user]
 	name = Arnaud Rinquin
 	email = rinquin.arnaud@gmail.com
